tests/diag/bad-enum.wisp
surface bar {
  widget clock {
    align = exclusive;
  }
}
